[package]
name = "librespot"
version = "0.1.0"
authors = ["Paul Liétar <paul@lietar.net>"]
build = "build.rs"
license = "MIT"
description = "Open Source Spotify client library"
keywords = ["spotify"]
repository = "https://github.com/plietar/librespot"
readme = "README.md"

[lib]
name = "librespot"
path = "src/lib.rs"

[[bin]]
name = "librespot"
path = "src/main.rs"

[dependencies.librespot-protocol]
path = "protocol"

[dependencies]
anymap = "0.12.0"
argparse = "0.2.1"
bounded-spsc-queue = "0.1.2"
byteorder = "0.5.3"
env_logger = "0.3.5"
lazy_static = "0.2.2"
lewton = { version = "0.4.1", features = ["async_ogg"] }
log = "0.3.6"
num = "0.1.36"
ogg = { version = "0.4.0", features = ["async"] }
protobuf = "1.0.24"
rand = "0.3.14"
rpassword = "0.3.0"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.21"
serde = "0.8.17"
serde_derive = { version = "0.8.17", optional = true }
serde_json = "0.8.3"
uuid = { version = "0.3.1", features = ["v4"] }
url = "1.2.3"

json_macros = { git = "https://github.com/plietar/json_macros" }
protobuf_macros = { git = "https://github.com/plietar/rust-protobuf-macros" }
shannon = { git = "https://github.com/plietar/rust-shannon" }

futures = { git = "https://github.com/alexcrichton/futures-rs" }
hyper = { git = "https://github.com/hyperium/hyper", branch="tokio" }
tokio-core = { git = "https://github.com/tokio-rs/tokio-core" }
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }

[target.'cfg(not(target_os="windows"))'.dependencies]
mdns = { git = "https://github.com/plietar/rust-mdns" }

[target.'cfg(target_os="linux")'.dependencies]
alsa = "0.1.3"

[target.'cfg(target_os="macos")'.dependencies]
coreaudio-rs = "0.6.0"

[target.'cfg(target_os="windows")'.dependencies]
winapi = "0.2"
ole32-sys = "*"
kernel32-sys = "*"

[build-dependencies]
vergen = "0.1.1"
json_macros = { git = "https://github.com/plietar/json_macros" }
protobuf_macros = { git = "https://github.com/plietar/rust-protobuf-macros" }
serde_codegen = { version = "0.8.17", optional = true }

[features]
default = ["with-syntex"]
with-syntex = ["serde_codegen", "protobuf_macros/with-syntex", "json_macros/with-syntex"]
nightly = ["serde_derive"]

[package.metadata.deb]
maintainer = "nobody"
copyright = "2016 Paul Liétar"
license_file = ["LICENSE", "4"]
depends = "$auto"
extended_description = """\
librespot is an open source client library for Spotify. It enables applications \
to use Spotify's service, without using the official but closed-source \
libspotify. Additionally, it will provide extra features which are not \
available in the official library."""
section = "sound"
priority = "optional"
assets = [
    ["target/release/librespot", "usr/bin/", "755"]
]
